# remote-mcp

./: Dockerfile  app.yaml  pyproject.toml  requirements.txt  server_tool.py  u.txt
mcp_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
