[project]
name = "mcp-server"
version = "0.1.0"
description = "A simple MCP server using FastMCP and uv"
dependencies = ["fastmcp","openai","fastapi","uvicorn"]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server_tool"]