[project]
name = "mcp-server"
version = "0.1.0"
description = "A simple MCP server using FastMCP and uv"
dependencies = [
    "fastmcp>=2.5.0",
    "openai>=1.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "starlette>=0.27.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server_tool"]